@@ -1,5 +1,6 @@
 service printer
 {
+	disable = yes
 	socket_type = stream
 	protocol = tcp
 	wait = no
