@@ -11,7 +11,7 @@
 <B>Location:</B> {printer_location}<BR>
 <B>Printer Driver:</B> {printer_make_and_model} ({color_supported=1?color:grayscale}{sides_supported?, 2-sided printing:})<BR>
 <B>Printer State:</B> {printer_state=3?idle:{printer_state=4?processing:stopped}},
-{printer_is_accepting_jobs=0?rejecting jobs:accepting jobs}, {printer_is_shared=0?not:} published{default_name={printer_name}?, default printer:}.<BR>
+{printer_is_accepting_jobs=0?rejecting jobs:accepting jobs}, {server_is_sharing_printers=0?not:{printer_is_shared=0?not:}} shared{default_name={printer_name}?, default printer:}.<BR>
 <B>Default Options:</B> job-sheets={job_sheets_default}
 media={media_default?{media_default}:unknown}
 {sides_default?sides={sides_default}:}
@@ -36,10 +36,10 @@ media={media_default?{media_default}:unknown}
 
 <P><TABLE CLASS="inset" WIDTH="100%" SUMMARY="Administration Commands">
 <CAPTION>Administration Commands</CAPTION>
-<TR><TD>{printer_is_shared=0?
-<FORM ACTION="{admin_uri}" METHOD="POST"><INPUT TYPE="HIDDEN" NAME="OP" VALUE="set-sharing"><INPUT TYPE="HIDDEN" NAME="printer_name" VALUE="{%printer_name}&amp;shared=1"><INPUT TYPE="SUBMIT" VALUE="Publish Printer"></FORM>
-:<FORM ACTION="{admin_uri}" METHOD="POST"><INPUT TYPE="HIDDEN" NAME="OP" VALUE="set-sharing"><INPUT TYPE="HIDDEN" NAME="printer_name" VALUE="{%printer_name}&amp;shared=0"><INPUT TYPE="SUBMIT" VALUE="Unpublish Printer"></FORM>
-}
+<TR><TD>{server_is_sharing_printers=0?:{printer_is_shared=0?
+<FORM ACTION="{admin_uri}" METHOD="POST"><INPUT TYPE="HIDDEN" NAME="OP" VALUE="set-sharing"><INPUT TYPE="HIDDEN" NAME="printer_name" VALUE="{%printer_name}&amp;shared=1"><INPUT TYPE="SUBMIT" VALUE="Share Printer"></FORM>
+:<FORM ACTION="{admin_uri}" METHOD="POST"><INPUT TYPE="HIDDEN" NAME="OP" VALUE="set-sharing"><INPUT TYPE="HIDDEN" NAME="printer_name" VALUE="{%printer_name}&amp;shared=0"><INPUT TYPE="SUBMIT" VALUE="Unshare Printer"></FORM>
+}}
 <FORM ACTION="{admin_uri}" METHOD="POST"><INPUT TYPE="HIDDEN" NAME="OP" VALUE="modify-printer"><INPUT TYPE="HIDDEN" NAME="printer_name" VALUE="{%printer_name}"><INPUT TYPE="SUBMIT" VALUE="Modify Printer"></FORM>
 <FORM ACTION="{admin_uri}" METHOD="POST"><INPUT TYPE="HIDDEN" NAME="OP" VALUE="set-printer-options"><INPUT TYPE="HIDDEN" NAME="printer_name" VALUE="{%printer_name}"><INPUT TYPE="SUBMIT" VALUE="Set Printer Options"></FORM>
 <FORM ACTION="{admin_uri}" METHOD="POST"><INPUT TYPE="HIDDEN" NAME="OP" VALUE="delete-printer"><INPUT TYPE="HIDDEN" NAME="printer_name" VALUE="{%printer_name}"><INPUT TYPE="SUBMIT" VALUE="Delete Printer"></FORM>
